--- a/alunas/mirella/css/style.css
+++ b/alunas/mirella/css/style.css
@@ -1,140 +1,216 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-size: 10px;
 }
 
 body {
-    background-color: #F5EFED;
-    border-radius: 10rem;
+    background-color: #F8F3F2;
+}
+
+a:hover {
+    color: #D96C06;
+    text-decoration: none;
+    font-weight: bolder;
+}
+
+h1 {
+    font-size: 2rem;
+    font-family: 'Solway', serif;
+    color: #D96C06;
+}
+
+li {
+    list-style: none;
+}
+
+/* HEADER */
+
+header {
+    box-sizing: border-box;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 8rem;
+    padding: 1rem 4rem 1rem 4rem;
+    position: fixed;
+    top: 0;
+}
+
+.headerRaposa {
+    max-width: 20vw;
+    width: 75px;
+}
+
+.headerMenu {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+    max-width: 80%;
+    width: 30%;
+    list-style: none;
     font-family: 'Solway', serif;
 }
 
-header, footer {
-    width: 100%;
-    height: 10vh;
-    background-color: #ffffff;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-}
-
-.header__conteudo {
-    padding: 2vh;
-}
-
-.footer {
-    display: flex;
-    flex: row;
-}  
-
-.box__um {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    margin: 2vh;
-    background-color: white;
-    border-radius: 10px;
-    box-sizing: border-box;
-}
-
-.box__dois {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 2vh;
-}
-
-
-.box__octocat {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 33%;
-    padding: 2vh;
-    text-align: center;
-    color: #0F0A0A;
-    font-size: small;
-}
-
-.link__laranja {
-    color: #D96C06;
-    text-decoration: solid;
+.headerLink {
+    text-decoration: none;
     font-weight: bold;
+    font-size: 1.8rem;
+    color: #0f0a0a;
 }
 
-.box__sobre {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 2vh;
-    width: 33%;
-    text-align: justify;
-    color: #0F0A0A;
-    font-size: small;
-}
+/* SECTION SOBRE */
 
-.box__sobre > p {
-    margin-bottom: 3vh;
-}
-
-.box__fotos {
+.sobre {
+    box-sizing: border-box;
+    font-family: 'Hind Siliguri', sans-serif;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    width: 33%;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 10rem 2rem 2rem 2rem;
 }
 
-.mirella__foto {
-    border-radius: 10px;
-}
+/*OCTOCAT */
 
-.box__musicas, .box__series, .box__animes, .box__filmes, .box__livros {
+.sobreOctocat {
     display: flex;
     flex-direction: column;
-    text-align: left;
+    justify-content: flex-start;
     background-color: white;
     border-radius: 10px;
-    width: 19%;
-    height: 48vh;
+    padding: 2rem;
+    margin-bottom: 1rem;
+    max-width: 100%;
+    width: 320px;
+    align-items: center;
 }
 
-.box__categorias {
-    color: #0F0A0A;
-    padding: 2vh;
-    text-align: left;
+.sobreOctocat > p {
+    font-size: 1.2rem;
+    text-align: center;
 }
 
-.box__listas {
-    list-style: none;
-    padding: 2vh;
-    text-align: left;
-    font-size: smaller;
+.octocatImg {
+    max-width: 50vw;
+    width: 300px;
 }
 
-.box__listas > li {
-    margin-bottom: 1vh;
+.octocatLink {
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 1.2rem;
+    color: #D96C06;
 }
 
+/* BIO */
 
-.box__redes {
+.sobreBio {
     display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background-color: white;
+    border-radius: 10px;
+    padding: 2rem;
+    margin-bottom: 1rem;
+    max-width: 100%;
+    width: 320px;
+    align-items: left;
+}
+
+.sobreBio > p {
+    font-size: 1.2rem;
+    text-align: justify;
+    margin-bottom: 1rem;
+}
+
+/* FOTOS */
+
+.sobreFotos {
+    background-color: white;
+    display: flex;
+    flex-direction: grid;
+    justify-content: flex-start;
+    align-content: center;
+    flex-wrap: wrap;
+    background-color: white;
+    border-radius: 10px;
+    margin-bottom: 1rem;
+    padding: 2rem;
+    max-width: 100%;
+    width: 640px;
+}
+
+.fotosImg {
+    max-width: 100vw;
+    width: 180px;
+    margin: 1rem;
+    border-radius: 10px;
+}
+
+/* SECTION INTERESSES */
+
+.interesses {
+    box-sizing: border-box;
+    font-family: 'Hind Siliguri', sans-serif;
+    display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    align-items: flex-end;
+    margin: 2rem;
 }
 
-.box__bolinhas1, .box__bolinhas2, .box__bolinhas3, .box__bolinhas4 {
+
+.intCaixa {
+    background-color: white;
+    box-sizing: border-box;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+    align-content: flex-start;
+    background-color: white;
+    border-radius: 10px;
+    margin-bottom: 1rem;
+    padding: 2rem;
+    max-width: 320px;
+    width: 250px;
+}
+
+.intLink {
+    text-decoration: none;
+    color: #0f0a0a;
+    font-size: 1.4rem;
+}
+
+/*REDES SOCIAIS*/
+
+footer {
+    box-sizing: border-box;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 8rem;
+    padding: 1rem 4rem 1rem 4rem;
+}
+
+.redesBolinhas {
     background-color: #D96C06;
-    width: 5vh;
-    height: 5vh;
-    border-radius: 5vh;
-    padding: 1vh;
-    margin: 1vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    align-items: center;
+    margin: 1rem;
+}
+
+.redesImg {
+    max-width: 35px;
 }
